--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -74,12 +74,13 @@ header {
   flex-wrap: wrap;
   gap: 40px;
   margin: 50px 0;
+  margin-right: 20px;
 }
 
 .movie-card {
   position: relative;
   width: 380px;
-  height: 450px;
+  height: 550px;
   padding: 10px;
   border-radius: 5px;
   background-color: white;
@@ -121,9 +122,9 @@ header {
 .movie-title {
   display: flex;
   align-items: center;
-  margin-left: 10px;
-  margin-top: 10px;
-  font-size: 1.8rem;
+  margin-left: 12px;
+  margin-top: 12px;
+  font-size: 2rem;
   font-weight: 600;
 }
 
