style: media query 적용, (튜터님 피드백) 카드 비율 변경, 검색시 카드 레이아웃 변경

--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -76,7 +76,7 @@ header {
 #card-container {
   width: 90%;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 380px));
   justify-content: space-evenly;
   gap: 40px;
   margin: 50px 0;
@@ -142,4 +142,15 @@ header {
   color: yellowgreen;
   font-size: 2rem;
   font-weight: 600;
+}
+
+@media (max-width: 1080px) {
+  #header-logo {
+    display: none;
+  }
+
+  #search-input {
+    width: 300px;
+    margin-left: 25px;
+  }
 }
