--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -7,10 +7,7 @@
 
 html,
 body {
-  min-height: 100%;
-}
-
-html {
+  min-height: 100vh;
   margin: 0;
   padding: 0;
   font-size: 10px;
@@ -70,7 +67,6 @@ header {
   display: flex;
   justify-content: center;
   margin: 0 auto;
-  margin-right: 20px;
 }
 
 #card-container {
